--- a/class-03-responsive-mobile-first/pair-assignment/starter-code/styles/modules.css
+++ b/class-03-responsive-mobile-first/pair-assignment/starter-code/styles/modules.css
@@ -10,7 +10,8 @@
 
 /* TODO: Add styles for the icon-menu class. It should be bigger, and off to the right. */
 .icon-menu {
-
+  float: right;
+  font-size: 3em;
 }
 
 .main-nav {
@@ -52,6 +53,15 @@
   font-weight: bold;
   text-decoration: none;
 }
+
+@media only screen and (min-width: 640px) {
+  
+  .icon-menu {
+    display: hide;
+  }
+
+}
+
 
 /* TODO: Now add styles for how things should look on a larger screen:
          - Hide the hamburger.
